[gd_scene load_steps=2 format=3 uid="uid://duqvaikwlc7n0"]

[ext_resource type="Script" uid="uid://djihxowxijbej" path="res://scripts/mana_bar.gd" id="1_phkia"]

[node name="ManaBar" type="ProgressBar"]
offset_right = 4.0
offset_bottom = 27.0
show_percentage = false
script = ExtResource("1_phkia")

[node name="DelayBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_right = 4.0
offset_bottom = 27.0
show_percentage = false

[node name="ManaLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
